--- a/.pylintrc
+++ b/.pylintrc
@@ -11,3 +11,9 @@ disable=broad-except
 
 [IMPORTS]
 disable=import-error
+
+[TYPECHECK]
+
+# List of members which are set dynamically and missed by Pylint inference
+# system, and so shouldn't trigger E1101 when accessed.
+generated-members=numpy.*, torch.*
